[package]
name = "owasu"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["tracing", "signal", "rt-multi-thread"] }
serde = { version = "1.0.136", features = ["derive"]}
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.79"
getset = "0.1.2"
figlet-rs = "0.1.3"
serde_yaml = "0.8"
tracing-subscriber = { version = "0.3.8" , features = ["env-filter", "time", "fmt" , "std", "local-time"] } 
tracing = "0.1.30"
axum = "0.5.6"
axum-extra = "0.3.3"
tower-http = { version = "0.3.3", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
humantime-serde = "1.0.1"
tracing-log = "0.1.1"
hyper = { version = "0.14.18" , features = ["http1"] , default-features = false }
time  = {version = "0.3.7", features = ["macros"] }
clap = { version = "3.1.5", features = ["derive"] }
axum-server = "0.4.0"
chrono = "0.4.19"
rustls = "0.20.4"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = 'abort'
